# sa3ir

./: .gitattributes  CMakeLists.txt  README.md  kill.sh  start.sh
ZMQServer/: CMakeLists.txt
ZMQServer/include/client/: mironDDS_listener.hpp  query_client.hpp  variant_client.hpp
ZMQServer/include/queries/: change_velocity.hpp
ZMQServer/models/: coffeeDelivering_1.mzn  coffeeDelivering_2.mzn
ZMQServer/src/: MironDDSListener.cpp  brokerZMQ.cpp  clientZMQ.cpp  minizinc.cc
ZMQServer/tests/: test_queries.cpp
behaviorTreeAgent/: CMakeLists.txt  DoxyFile  README.md  README.md.new  behaviorTree.cdsl  ulm_trace.fbl
behaviorTreeAgent/etc/: config
behaviorTreeAgent/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  genericworker.cpp  main.cpp  specificworker.cpp  specificworker.h
contextProviderComp/: CMakeLists.txt  DoxyFile  README.md  contextProvider.cdsl
contextProviderComp/src/: CMakeLists.txt  CMakeListsSpecific.txt  config.h  main.cpp  (+3 more)
deliverAgent/: CMakeLists.txt  DoxyFile  README.md  deliver.cdsl
etc/: initialModel_symbolic.xml  initialModel_symbolic_extended.xml
mironAgent/: CMakeLists.txt  DoxyFile  miron.cdsl
navigationAgent/: CMakeLists.txt  DoxyFile  README.md  navigationagent.cdsl
node/: server.js
objectRecognitionAgent/: CMakeLists.txt  DoxyFile  README.md  objectRecognition.cdsl
personAgent/: CMakeLists.txt  DoxyFile  README.md  personAgent.cdsl
pickUpAgent/: CMakeLists.txt  DoxyFile  README.md  pickUp.cdsl
realsenseComp/: CMakeLists.txt  DoxyFile  realsense.cdsl
trolleyDetectorComp/: CMakeLists.txt  DoxyFile  README.md  README.md.new  trolleyDetector.cdsl
webInterfaceAgent/: CMakeLists.txt  DoxyFile  README.md  start.sh  webInterfaceAgent.cdsl
(+218 files in other folders)
